# DeepLearningFromScratch

./: pyproject.toml
book1/beyond/: main.py
book1/ch2/: section3.1_perceptron_implementation.py  section3.2_WeightnBiasWithNumpy.py  section3.3_weight_bias_implementation.py  section4_limit_of_perceptron.py  section5_multi_layer_perceptron.py
book1/ch3/: section2_activation_functions.py  section3.1_n_dim_calc.py  section3.2_matrix_mult.py  section3.3_matrix_mult_in_nueral_net.py  section3.4_three_layer_nn.py  section5_output_layer.py  section6.1_hand_written_num_detect.py  section6.2_mnist_infer.py
book1/ch4/: section2.1_mean_squared_error.py  section2.2_cross_entropy_error.py  section2.3_mini_batch.py  section3_differentiation.py  section4.1_gradient.py  section4.2_gradient_in_nn.py  section4.5_2d_nn_implementation.py
book1/ch5/: section4_simple_layers.py  section5_activation_function_layer.py  section6_affine_softmax_layer.py  section7_nn_learning.py
book1/ch7/: future_challenge.md  params.pkl  section2_cnn_layer.md  section3_pooling_layer.md  section4_1_4_dim_array.py  section4_2_im2col_data_flatten.py  section4_3_conv_layer_implementation.py  section4_4_pooling_layer_implementation.py  section5_CNN_implementation.py
book1/common/: trainer.py
book2/ch2/: section3_1_preprocess_corpus.py  section3_2_distribution_repr_of_words.py  section4_1_improve_stat_methods.py  section4_2_dim_reduce.py  section4_4_PTB.py  section4_5_PTB_eval.py
book2/ch3/: secion2_1_simple_word2vec_CBOW.py  section3_1_context_n_target.py  section3_2_onehot_context.py  (+1 more)
(+12 files in other folders)
