[tool.poetry]
name = "deeplearningfromscratch"
version = "0.1.0"
description = ""
authors = ["John JongYoon Kim <mw18074@bristol.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
